<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="25dp">

    <LinearLayout
        android:padding="10dp"
        android:background="#f1f1f1"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_margin = "10dp">

        <ImageView
            android:id="@+id/food_order_image"
            android:layout_width="128dp"
            android:layout_height="157dp"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_rest_name"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/rest_name"
                android:textColor="#000"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/food_order_name"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/food_name"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/food_order_price"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="125dp"
                android:background="@drawable/capsule"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/trash"
                android:layout_width="32dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="123dp"
                android:background="@drawable/trash"
                android:gravity="center"
                android:textColor="#fff"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
