<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/activity_profile"
    android:background="#0e0e2b">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <!--<ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tag" />-->
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/email"
                android:layout_margin="20dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_gravity="top"
                android:padding="5dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textColor="#fff"
               android:textSize="25sp"
                android:text="@string/Sarah_Solkar" />
            <TextView
                android:id="@+id/email"
                android:layout_marginTop="0dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:padding="2dp"
                android:textColor="#fff"
                android:elevation="4dp"
                android:text="@string/email_profile"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bio"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:padding="2dp"
                android:textSize="20sp"
                android:elevation="4dp"
                android:textAlignment="center"
                android:text="@string/BochaHila"
                android:textColor="#fff"/>



        </LinearLayout>
    </LinearLayout>
</ScrollView>