<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/activity_profile"
    android:background="#19191a">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <!--<ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tag" />-->
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/sarah_image"
                android:layout_width="500dp"
                android:layout_height="500dp"
                android:src="@drawable/sarah"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="11dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/sarah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginBottom="0dp"
            android:text="@string/Sarah_Solkar"/>

        <TextView
            android:id="@+id/sarah_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="5dp"
            android:layout_marginTop="0dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_marginBottom="50dp"
            android:text="Quirky, Weird, Android Developer."/>







        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <!--<ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tag" />-->
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/nimbu_image"
                android:layout_width="500dp"
                android:layout_height="500dp"
                android:src="@drawable/nimbu"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="11dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/nimbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginBottom="0dp"
            android:text="@string/nishant_nimbalkar"/>
        <TextView
            android:id="@+id/nimbu_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="5dp"
            android:layout_marginTop="0dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_marginBottom="50dp"
            android:text="Trekking, Foodie, Backend Developer."/>





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <!--<ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tag" />-->
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/leeaa_image"
                android:layout_width="500dp"
                android:layout_height="500dp"
                android:src="@drawable/leeaa"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="11dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/leeaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/leeaa_nair"/>
        <TextView
            android:id="@+id/leeaa_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="5dp"
            android:layout_marginTop="0dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"
            android:text="Geeky, Smart, Database Developer."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_gravity="top"
                android:padding="5dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textColor="#fff"
               android:textSize="25sp"
                android:text="@string/Sarah_Solkar" />-->
            <!--<TextView-->
                <!--android:id="@+id/email"-->
                <!--android:textSize="20sp"-->
                <!--android:layout_marginBottom="240dp"-->
                <!--android:layout_marginTop="20sp"-->
                <!--android:layout_marginLeft="20dp"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="top"-->
                <!--android:padding="2dp"-->
                <!--android:textColor="#fff"-->
                <!--android:elevation="4dp"-->
                <!--android:text=""-->
                <!--android:textAlignment="center"-->
                <!--android:textStyle="bold"/>-->

            <TextView
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_alignParentBottom="true"
                android:textSize="16sp"
                android:elevation="4dp"
                android:textAlignment="center"
                android:text="@string/bablipat"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>